banner gap fixed

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,16 +2,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #pageWrap {
   width: 980px;
   margin: 0 auto;
-  border: 1px solid green;
 }
 body {
   background-color: #FFF8DC;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
 }
 
 footer {
@@ -20,10 +21,7 @@ footer {
 
 nav {
   height: 70px;
-  border: 1px solid red;
-  margin-top: 0 auto;
-  margin-left: 0 auto;
-  margin-right: 0 auto;
+  background-color: #FFF3C3;
 }
 
 nav img {
@@ -32,13 +30,12 @@ nav img {
   float: left;
 }
 
-nav ul {
+#mainNav {
   float: left;
   width: auto;
   height: 70px;
   margin: 0 auto;
   position: relative;
-  border: 1px solid green;
   padding: 0;
 }
 
